<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.main.MainActivity">

 <androidx.appcompat.widget.AppCompatImageView
     android:id="@+id/appCompatImageView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scaleType="centerCrop"
     android:src="@drawable/background" />

 <View
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/landing_background"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="0dp" />

 <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonViewSavedImages"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:includeFontPadding="false"
        android:text="@string/saved_images"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:backgroundTint="@color/buttonSavedImages"
        app:cornerRadius="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent" />


 <com.google.android.material.button.MaterialButton
     android:id="@+id/buttonSaturation"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_45sdp"
     android:layout_marginBottom="@dimen/_4sdp"
     android:backgroundTint="@color/primaryDark"
     android:includeFontPadding="false"
     android:text="@string/adjust_saturation"
     android:textColor="@color/white"
     android:textSize="@dimen/_12sdp"
     app:cornerRadius="@dimen/_20sdp"
     app:layout_constraintBottom_toTopOf="@id/buttonViewSavedImages"
     tools:layout_editor_absoluteX="0dp" />

 <com.google.android.material.button.MaterialButton
     android:id="@+id/buttonCamera"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_45sdp"
     android:backgroundTint="@color/primaryDark"
     android:includeFontPadding="false"
     android:text="@string/take_a_photo"
     android:textColor="@color/white"
     android:textSize="@dimen/_12sdp"
     app:cornerRadius="@dimen/_20sdp"
     app:layout_constraintBottom_toTopOf="@+id/buttonFilters"
     tools:layout_editor_absoluteX="16dp" />

 <com.google.android.material.button.MaterialButton
     android:id="@+id/buttonFilters"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_45sdp"
     android:layout_marginBottom="4dp"
     android:backgroundTint="@color/primaryDark"
     android:includeFontPadding="false"
     android:text="@string/apply_filters"
     android:textColor="@color/white"
     android:textSize="@dimen/_12sdp"
     app:cornerRadius="@dimen/_20sdp"
     app:layout_constraintBottom_toTopOf="@+id/buttonCamera3"
     tools:layout_editor_absoluteX="0dp" />

 <com.google.android.material.button.MaterialButton
     android:id="@+id/buttonCamera3"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_45sdp"
     android:backgroundTint="@color/primaryDark"
     android:includeFontPadding="false"
     android:text="@string/crop_image"
     android:textColor="@color/white"
     android:textSize="@dimen/_12sdp"
     app:cornerRadius="@dimen/_20sdp"
     app:layout_constraintBottom_toTopOf="@+id/buttonSaturation"
     tools:layout_editor_absoluteX="0dp" />

 <TextView
     android:id="@+id/textTitle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="100dp"
     android:includeFontPadding="false"
     android:text="@string/image_filters"
     android:textColor="@color/white"
     android:textSize="@dimen/_20sdp"
     android:textStyle="bold"
     android:typeface="normal"
     app:layout_constraintBottom_toTopOf="@+id/buttonCamera"
     tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>